# AndroidNativeAim

./: CMakeLists.txt  README.md  termux_build.sh  termux_setup.sh
models/: yolov5s_ncnn.py
scripts/: calibrate.sh  download_model.sh  performance_test.sh  start.sh  termux_wrapper.sh
src/: main.cpp
src/ai/: Detector.cpp  Detector.h  NCNNLoader.cpp  NCNNLoader.h
src/aim/: AimController.cpp  AimController.h  TargetPredictor.cpp  TargetPredictor.h
src/capture/: FrameBuffer.cpp  FrameBuffer.h  ScreenCapture.cpp  ScreenCapture.h
src/gui/: DebugDisplay.cpp  DebugDisplay.h  Overlay.cpp  Overlay.h
src/input/: GestureSimulator.cpp  GestureSimulator.h  InputInjector.cpp  InputInjector.h
src/utils/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
tests/: benchmark.cpp  test_capture.cpp
training/: collect_data.py  export_ncnn.py  train_yolo.py
training/dataset/: dataset.yaml
